--- a/USB2SPI_XO2_BoB_3_9_18/implementation/.spreadsheet_view.ini
+++ b/USB2SPI_XO2_BoB_3_9_18/implementation/.spreadsheet_view.ini
@@ -3,7 +3,7 @@ pin_sort_type=0
 pin_sort_ascending=true
 sig_sort_type=0
 sig_sort_ascending=true
-active_Sheet=Pin Assignments
+active_Sheet=Port Assignments
 
 [Port%20Assignments]
 Name="183,0"
@@ -33,13 +33,13 @@ sort_columns="Name,Ascending"
 [Pin%20Assignments]
 Pin="90,0"
 Pad%20Name="89,1"
-Dual%20Function="133,2"
+Dual%20Function="158,2"
 Polarity="77,3"
 BANK="0,4"
 BANK_VCC="90,5"
 IO_TYPE="145,6"
-Signal%20Name="105,7"
-Signal%20Type="98,8"
+Signal%20Name="157,7"
+Signal%20Type="115,8"
 sort_columns="Pin,Ascending"
 
 [Clock%20Resource]
